fix(sdk): scroll for overflowing tool panels

--- a/ext/sdk/resources/sdk-root/shell/src/personalities/WorldEditorPersonality/components/WorldEditorToolbar/BaseTool/BaseTool.module.scss
+++ b/ext/sdk/resources/sdk-root/shell/src/personalities/WorldEditorPersonality/components/WorldEditorToolbar/BaseTool/BaseTool.module.scss
@@ -59,6 +59,7 @@
   left: $weToolbarOffset;
 
   max-height: $wePanelHeight;
+  overflow-y: auto;
 
   width: $wePanelWidth;
 
